<resources>
    <!-- App Name -->
    <string name="app_name">Om-Nom-Nom</string>

    <!-- Image Descriptions -->
    <string name="txtBackground">This is the background</string>
    <string name="txtButton">This is a button</string>
    <!-- Game Previews -->
    <string name="txtGame1">This is the preview for game 1</string>
    <string name="txtGame2">This is the preview for game 2</string>

    <!-- Image Buttons -->
    <string name="txtGame1Start">This is the image button for game 1</string>
    <string name="txtGame2Start">This is the button for game 2</string>

    <!-- Buttons -->
    <string name="txtBack">Back</string>

    <!-- Outcome Texts -->
    <string name="txtRetry">Retry</string>
    <string name="txtChange">Change</string>

    <!-- Headings -->
    <string name="txtGameSelect">Select A Game To Play</string>

    <!-- Game 1 Texts -->
    <string name="txtGame1Welcome">Jack en Poy</string>
    <string name="txtGame1Instructions">Press the button of your choice:</string>
    <string name="txtGoal1">First to get 10pts wins the game!</string>
    <string name="txtScoreAI">Score:\n0</string>
    <string name="txtScorePlayer">Score:\n0</string>
    <string name="txtPlayer">Player</string>
    <string name="txtAI">AI</string>
    <string name="txtRock">Rock</string>
    <string name="txtPaper">Paper</string>
    <string name="txtScissors">Scissors</string>

    <!-- Game 1 Logic Outcomes -->
    <string name="txtBoth">Same choice!. No Points!</string>
    <string name="txtWonRock">Rock beats scissors!</string>
    <string name="txtWonPaper">Paper beats rock!</string>
    <string name="txtWonScissors">Scissors beats paper!</string>

    <string name="txtWon">You WON!</string>
    <string name="txtLost">You LOST!</string>

    <string name="txtZeros">00</string>

    <!-- Game 2 Texts -->
    <string name="txtHiLow">Higher or Lower?</string>
    <string name="txtStart">Start</string>
    <string name="txtHigh">Higher</string>
    <string name="txtLow">Lower</string>
    <string name="txtThird">Third Card</string>
    <string name="txtSecond">Second Card</string>
    <string name="txtFirst">First Card</string>
    <string name="txtGame2Welcome">In-Between</string>
    <string name="txtGame2Welcome2">Guessing Game</string>
    <string name="txtInput">Enter Your Bet</string>
    <string name="txtNoDeal">NO DEAL</string>
    <string name="txtDeal">DEAL</string>

</resources>