<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".GameActivity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/btnBack"
            android:onClick="btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBack"
            android:backgroundTint="@color/orange"
            android:fontFamily="serif">

        </Button>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/txtGame2Welcome2"
            android:textColor="@color/black"
            android:textSize="35sp" />
        <TextView
            android:id="@+id/inBetweenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/txtGame2Welcome"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/titleText"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/cardOne"
            android:contentDescription="@string/txtFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/cardThree"
            android:layout_centerInParent="true"
            android:src="@drawable/ace_heart"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/firstCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtFirst"
            android:layout_toStartOf="@id/thirdCard"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="45dp"
            android:layout_below="@id/cardOne"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="serif"/>

<!--        Second Card-->
        <ImageView
            android:id="@+id/cardTwo"
            android:contentDescription="@string/txtSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cardThree"
            android:layout_centerInParent="true"
            android:src="@drawable/ace_heart"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/secondCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSecond"
            android:textStyle="bold"
            android:layout_toEndOf="@id/thirdCard"
            android:layout_marginTop="5dp"
            android:layout_marginStart="37dp"
            android:layout_below="@id/cardTwo"
            android:textColor="@color/black"
            android:fontFamily="serif"/>

        <TextView
            android:id="@+id/thirdCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardThree"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:text="@string/txtThird"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="serif"/>

        <Button
            android:id="@+id/lowerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstCard"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/highLowText"
            android:backgroundTint="@color/orange"
            android:fontFamily="serif"
            android:text="@string/txtLow" />
        <Button
            android:id="@+id/higherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtHigh"
            android:layout_toEndOf="@id/highLowText"
            android:layout_below="@id/secondCard"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="serif"/>

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/highLowText"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="serif"
            android:text="@string/txtStart" />

<!--        Third Card-->
        <ImageView
            android:id="@+id/cardThree"
            android:contentDescription="@string/txtThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ace_heart"/>


<!--        Higher/Lower/Win/Lose-->
        <TextView
            android:id="@+id/highLowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/thirdCard"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/txtHiLow"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/winText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtWon"
            android:layout_marginTop="10dp"
            android:layout_below="@id/inBetweenText"
            android:layout_centerInParent="true"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/loseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/inBetweenText"
            android:layout_centerInParent="true"
            android:fontFamily="serif"
            android:text="@string/txtLost"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chipsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chips:"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:layout_centerInParent="true"
            android:layout_below="@id/winText"
            android:fontFamily="serif"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/chipNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/chipsText"
            android:text="1000"
            android:textSize="25sp"
            android:fontFamily="serif"
            android:textColor="@color/black"/>

<!--Guess sa third card-->
        <EditText
            android:id="@+id/editInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startButton"
            android:layout_centerInParent="true"
            android:hint="@string/txtInput"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnNoDeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/higherButton"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/startButton"
            android:backgroundTint="@color/orange"
            android:fontFamily="serif"
            android:text="@string/txtNoDeal">

        </Button>

        <Button
            android:id="@+id/btnDeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lowerButton"
            android:layout_centerInParent="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/startButton"
            android:backgroundTint="@color/orange"
            android:fontFamily="serif"
            android:text="@string/txtDeal">

        </Button>

    </RelativeLayout>

</LinearLayout>