<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".GameActivity1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/btnBack"
            android:onClick="btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBack"
            android:backgroundTint="@color/orange"
            >

        </Button>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtGame1Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtGame1Welcome"
        android:textAlignment="center"
        android:textSize="40sp"
        android:fontFamily="@font/lazy_dog"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        >

    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" >

        <ImageView
            android:id="@+id/imgAI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/txtAIScore"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="65dp"
            android:contentDescription="@string/txtAI"
            android:src="@drawable/question_mark">

        </ImageView>

        <ImageView
            android:id="@+id/imgPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/txtPlayerScore"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="65dp"
            android:contentDescription="@string/txtPlayer"
            android:src="@drawable/question_mark">

        </ImageView>

        <ImageButton
            android:contentDescription="@string/txtRock"
            android:id="@+id/btnRock"
            android:onClick="btnRock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/rock">

        </ImageButton>

        <ImageButton
            android:id="@+id/btnPaper"
            android:onClick="btnPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/txtPaper"
            android:src="@drawable/paper">

        </ImageButton>

        <ImageButton
            android:id="@+id/btnScissors"
            android:onClick="btnScissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/txtScissors"
            android:src="@drawable/scissors"
            >

        </ImageButton>

        <TextView
            android:id="@+id/txtGame1Instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnPaper"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/lazy_dog"
            android:text="@string/txtGame1Instructions"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/imgPlayer"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="65dp"
            android:fontFamily="@font/lazy_dog"
            android:text="@string/txtPlayer"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp">

        </TextView>

        <TextView
            android:id="@+id/txtPlayerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/txtGame1Instructions"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lazy_dog"
            android:text="@string/txtZeros"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/imgAI"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="95dp"
            android:fontFamily="@font/lazy_dog"
            android:text="@string/txtAI"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp">

        </TextView>

        <TextView
            android:id="@+id/txtAIScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/txtGame1Instructions"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lazy_dog"
            android:text="@string/txtZeros"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp">

        </TextView>

        <TextView
            android:id="@+id/txtGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lazy_dog"
            android:text="@string/txtGoal1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/txtLogic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@id/txtGoal"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lazy_dog"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            >

        </TextView>

    </RelativeLayout>

</LinearLayout>